--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
+body {
+	text-align: center;
+}
 h1, h3 {
 	font-family: "Russo One", sans serif;
+	text-decoration: underline;
 }
 
 a {
@@ -10,4 +14,10 @@ a {
 p {
 	font-size: 20px;
 	font-weight: : 500;
+}
+
+#instructions {
+	
+	text-decoration: overline;
+
 }
