--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,41 @@
+
 body {
 	text-align: center;
 }
 h1, h3 {
-	font-family: "Russo One", sans serif;
 	text-decoration: underline;
+	text-transform: uppercase;
+	color: #0D2C40;
+	letter-spacing: 1px;
+
+}
+h1 {
+	font-family: "Raleway", sans-serif;
+	font-weight: 400;
+	font-size: 45px;
+}
+
+h3	{
+	font-weight: 600;
+	font-size: 20px;
+
+}
+
+p {
+	font-family: "Droid Serif", serif;
+	line-height: 26px;
+	font-size: 18px;
+	
 }
 
 a {
+	font-family: "Raleway", sans-serif;
+	color: #F15B31;
+	letter-spacing: 1px;
+	font-weight: 600
+	font-size: 18px;
 	text-decoration: none;
 	font-style: italic;
 }
 
-p {
-	font-size: 20px;
-	font-weight: : 500;
-}
 
-#instructions {
-	
-	text-decoration: overline;
-
-}
