--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,12 @@
 
 body {
 	text-align: center;
+	margin: 0;
 }
 h1, h3 {
 	text-decoration: underline;
 	text-transform: uppercase;
-	color: #0D2C40;
+	/*color: #0D2C40; #Leftover from Unit 4*/
 	letter-spacing: 1px;
 
 }
@@ -13,6 +14,7 @@ h1 {
 	font-family: "Raleway", sans-serif;
 	font-weight: 400;
 	font-size: 45px;
+	margin: 0;
 }
 
 h3	{
@@ -30,12 +32,42 @@ p {
 
 a {
 	font-family: "Raleway", sans-serif;
-	color: #F15B31;
+	/*color: #F15B31;*/
 	letter-spacing: 1px;
 	font-weight: 600
 	font-size: 18px;
 	text-decoration: none;
 	font-style: italic;
+	margin: 0 20px;
+}
+
+header {
+	background-color: #F15B31;
+	color: #FFFFFF;
+	padding: 30px 20px;
+}
+
+nav {
+	background-color: #00A6B3;
+	color: #FFFFFF;
+	padding: 20px 0;
+} 
+
+ul {
+	list-style: none;
+}
+
+li {
+	display: inline;
+} 
+
+main {
+	width: 850px;
+	margin: 35px auto;
+}
+
+img {
+	margin: 40px 8px;
 }
 
 
