--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,7 @@ li {
 	display: inline;
 } 
 
+
 main {
 	width: 850px;
 	margin: 35px auto;
@@ -69,5 +70,16 @@ main {
 img {
 	margin: 40px 8px;
 }
+
+img.socialmedia {
+	width: 50px;
+	border-radius: 10px;
+}
+
+footer {
+	background-color: rgba(101,115,126,0.5);
+	padding: 0;
+}
+
 
 
