--- a/styles/style.css
+++ b/styles/style.css
@@ -107,3 +107,20 @@ footer {
 	font-size: 0;
 }
 
+table {
+	margin: 0 auto;
+	padding: 5px;
+	border: 2px black solid;
+	font-size: 18px;
+}
+th {
+	padding: 15px;
+	border: 2px black solid;
+	text-transform: uppercase;
+	font-weight: 600;
+}
+td {
+	padding: 10px;
+	border: 2px black solid;
+	font-weight: 400;
+}
