--- a/styles/style.css
+++ b/styles/style.css
@@ -74,18 +74,28 @@ li {
 } 
 
 
-main {
+.wrapper {
 	width: 850px;
 	margin: 35px auto;
 }
 
-img {
-	margin: 40px 8px;
+.board {
+	width: 100%;
+	height: 100%;
 }
 
+
 img.socialmedia {
+	margin: 40px 8px;
 	width: 50px;
 	border-radius: 10px;
+}
+
+img.card {
+	margin: 2px 5px;
+	width: 14%;
+	
+
 }
 
 img.card:hover {
@@ -123,10 +133,6 @@ td {
 	padding: 10px;
 	border: 2px black solid;
 	font-weight: 400;
-}
-
-.board {
-	
 }
 
 .gamefunctioncontainer {
