--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,22 @@
+/* Readme and Index go here
 
+	Colors:
+	Header Orange:	#F15B31
+	Nav Teal:		#00A6B3
+	Footer Grey:	rgba(13,44,64,0.8)
+
+*/
 body {
 	text-align: center;
 	margin: 0;
 }
+
 h1, h3 {
 	text-decoration: underline;
 	text-transform: uppercase;
-	/*color: #0D2C40; #Leftover from Unit 4*/
 	letter-spacing: 1px;
-
 }
+
 h1 {
 	font-family: "Raleway", sans-serif;
 	font-weight: 400;
@@ -21,7 +28,6 @@ h3	{
 	font-weight: 600;
 	font-size: 20px;
 	margin: 20px 0;
-
 }
 
 p {
@@ -33,10 +39,9 @@ p {
 
 a {
 	font-family: "Raleway", sans-serif;
-	/*color: #F15B31;*/
 	letter-spacing: 1px;
 	font-weight: 600
-	font-size: 18px;
+	font-size: 20px;
 	text-decoration: none;
 	font-style: italic;
 	margin: 0 20px;
@@ -47,10 +52,13 @@ a.navbar {
 	float: none;
 	padding: 20px;
 	text-decoration: none;
+	font-weight: 600;
+	color: #F15B31;
 }
 
 a.navbar:hover {
 	background-color: #F15B31;
+	color: #FFFFFF;
 }
 
 header {
@@ -73,29 +81,21 @@ li {
 	display: inline;
 } 
 
-
 .wrapper {
 	width: 850px;
 	margin: 35px auto;
 }
 
-.board {
-	width: 100%;
-	height: 100%;
-}
-
-
 img.socialmedia {
 	margin: 40px 8px;
 	width: 50px;
 	border-radius: 10px;
+	background-color: #FFFFFF;
 }
 
 img.card {
 	margin: 2px 5px;
 	width: 14%;
-	
-
 }
 
 img.card:hover {
@@ -104,7 +104,7 @@ img.card:hover {
 }
 
 footer {
-	background-color: rgba(13,44,64,0.8);
+	background-color: #F15B31;
 	padding: 0;
 }
 
