(added all files this time) Fixed button layout - added shuffle to reset button - removed dead footer links

--- a/styles/style.css
+++ b/styles/style.css
@@ -142,12 +142,24 @@ td {
 	background-color: #00A6B3;
 	font-size: 22px;
 	font-weight: 600px;
-	width: 15%;
-	height: 10%;
+	width: 120px;
+	height: 60px;
+	vertical-align: top;
 	}
 
 .gamefunction {
+	height:100%;
+	width: 100%;
+}
+
+#fakebutton{
+	text-align: center;
+	vertical-align: middle;
+	line-height: 60px;
+}
+
+#scoredisplay {
 	font-size: 22px;
-	font-weight: 00px;
+	font-weight: 700px;
 	color: #F15B31;
 }
