Bugfix: Reset would only reset score display, not scoreString

--- a/styles/style.css
+++ b/styles/style.css
@@ -157,6 +157,9 @@ td {
 	vertical-align: middle;
 	line-height: 60px;
 }
+#fakebutton:hover {
+	border: 2px dotted black;
+}
 
 #scoredisplay {
 	font-size: 22px;
