--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@
 body {
 	text-align: center;
 	margin: 0;
+	height: 100%;
+	width: 100%;
+
 }
 
 h1, h3 {
@@ -49,8 +52,11 @@ a {
 
 a.navbar {
 	diplay: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20%;
 	float: none;
-	padding: 20px;
+	padding: 15px;
 	text-decoration: none;
 	font-weight: 600;
 	color: #F15B31;
@@ -82,19 +88,20 @@ li {
 } 
 
 .wrapper {
-	width: 850px;
+	width: 70%;
 	margin: 35px auto;
 }
 
 img.socialmedia {
-	margin: 40px 8px;
-	width: 50px;
+	margin: 5% 2%;
+	width: 15%;
 	border-radius: 10px;
 	background-color: #FFFFFF;
 }
 
 img.card {
-	margin: 2px 5px;
+	margin: 5px;
+	height: 20%;
 	width: 14%;
 }
 
@@ -141,9 +148,9 @@ td {
 	display: inline-block;
 	background-color: #00A6B3;
 	font-size: 22px;
-	font-weight: 600px;
-	width: 120px;
-	height: 60px;
+	font-weight: 600;
+	width: 30%;
+	height: 15%;
 	vertical-align: top;
 	}
 
@@ -152,10 +159,27 @@ td {
 	width: 100%;
 }
 
+#wrappergame {
+	height: 100%;
+	width: 100%;
+}
+
+#wrappergamefunctions {
+	height: 8%;
+}
+
+#game-board {
+	height: 90%;
+	width: 96%;
+	overflow: scroll;
+	background-image: url("../images/tabletop.jpg");
+	margin: 0 auto;
+}
+
 #fakebutton{
 	text-align: center;
 	vertical-align: middle;
-	line-height: 60px;
+	line-height: 53.5px;
 }
 #fakebutton:hover {
 	border: 2px dotted black;
@@ -163,6 +187,6 @@ td {
 
 #scoredisplay {
 	font-size: 22px;
-	font-weight: 700px;
+	font-weight: 700;
 	color: #F15B31;
 }
