--- a/styles/style.css
+++ b/styles/style.css
@@ -6,60 +6,61 @@
 	Footer Grey:	rgba(13,44,64,0.8)
 
 */
+
+/* Tags and Tag.Classes*/
 body {
-	text-align: center;
 	margin: 0;
 	height: 100%;
 	width: 100%;
-
+	text-align: center;
 }
 
 h1, h3 {
+	letter-spacing: 1px;
 	text-decoration: underline;
 	text-transform: uppercase;
-	letter-spacing: 1px;
+	
 }
 
 h1 {
+	margin: 0;
 	font-family: "Raleway", sans-serif;
 	font-weight: 400;
 	font-size: 45px;
-	margin: 0;
 }
 
 h3	{
+	margin: 20px 0;
 	font-weight: 600;
 	font-size: 20px;
-	margin: 20px 0;
 }
 
 p {
 	font-family: "Droid Serif", serif;
 	line-height: 26px;
 	font-size: 18px;
-	
 }
 
 a {
+	margin: 0 20px;
 	font-family: "Raleway", sans-serif;
 	letter-spacing: 1px;
 	font-weight: 600
 	font-size: 20px;
-	text-decoration: none;
 	font-style: italic;
-	margin: 0 20px;
+	text-decoration: none;
 }
 
 a.navbar {
-	diplay: block;
+	display: inline-block;
 	margin-left: auto;
 	margin-right: auto;
+	padding: 15px;
 	width: 20%;
 	float: none;
-	padding: 15px;
+	color: #F15B31;
 	text-decoration: none;
 	font-weight: 600;
-	color: #F15B31;
 }
 
 a.navbar:hover {
@@ -68,15 +69,15 @@ a.navbar:hover {
 }
 
 header {
+	padding: 30px 20px;
 	background-color: #F15B31;
 	color: #FFFFFF;
-	padding: 30px 20px;
 }
 
 nav {
+	padding: 20px 0;
 	background-color: #00A6B3;
 	color: #FFFFFF;
-	padding: 20px 0;
 } 
 
 ul {
@@ -87,41 +88,30 @@ li {
 	display: inline;
 } 
 
-.wrapper {
-	width: 70%;
-	margin: 35px auto;
+img {
+
 }
 
-img.socialmedia {
-	margin: 5% 2%;
-	width: 15%;
-	border-radius: 10px;
-	background-color: #FFFFFF;
-}
-
+/* Why won't images resize using percentages? */
 img.card {
 	margin: 5px;
-	height: 20%;
-	width: 14%;
+	width: 11%;
 }
 
 img.card:hover {
 	border: 2px dotted black;
+}
 
+img.socialmedia {
+	margin: 5% 2%;
+	border-radius: 10px;
+	width: 5%;
+	background-color: #FFFFFF;
 }
 
 footer {
-	background-color: #F15B31;
 	padding: 0;
-}
-
-.clearfix:after {
-	visibility: hidden;
-	display: block;
-	content: " ";
-	clear: both;
-	height: 0;
-	font-size: 0;
+	background-color: #F15B31;
 }
 
 table {
@@ -142,21 +132,37 @@ td {
 	font-weight: 400;
 }
 
+/*Classes*/
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	content: " ";
+	clear: both;
+	height: 0;
+	font-size: 0;
+}
+
 .gamefunctioncontainer {
-	border: 5px solid #F15B31;
 	margin: 10px 5px;
+	border: 5px solid #F15B31;
+	width: 20%;
+	height: 15%;
+	vertical-align: top;
 	display: inline-block;
 	background-color: #00A6B3;
 	font-size: 22px;
 	font-weight: 600;
-	width: 30%;
-	height: 15%;
-	vertical-align: top;
 	}
 
 .gamefunction {
 	height:100%;
 	width: 100%;
+}
+
+.wrapper {
+	margin: 35px auto;
+	width: 70%;
 }
 
 #wrappergame {
@@ -169,18 +175,19 @@ td {
 }
 
 #game-board {
+	margin: 0 auto;
 	height: 90%;
 	width: 96%;
 	overflow: scroll;
 	background-image: url("../images/tabletop.jpg");
-	margin: 0 auto;
 }
 
 #fakebutton{
+	line-height: 53.5px;
 	text-align: center;
 	vertical-align: middle;
-	line-height: 53.5px;
 }
+
 #fakebutton:hover {
 	border: 2px dotted black;
 }
