--- a/styles/style.css
+++ b/styles/style.css
@@ -134,6 +134,10 @@ td {
 
 /*Classes*/
 
+.hidden {
+	display: none;
+}
+
 .clearfix:after {
 	visibility: hidden;
 	display: block;
@@ -146,8 +150,8 @@ td {
 .gamefunctioncontainer {
 	margin: 10px 5px;
 	border: 5px solid #F15B31;
-	width: 20%;
-	height: 15%;
+	width: 15%;
+	height: 12%;
 	vertical-align: top;
 	display: inline-block;
 	background-color: #00A6B3;
